<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="20dp"
    tools:context=".common.loginsignup.SignUp2ndClass"
    android:transitionName="SignUp_tran">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <!--back -->
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button_logo"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:transitionName="back_btn_tran" />

        <!--     create account-->
        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black_italic"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:transitionName="create_ac_tran" />

        <!--    name,email,password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!--select Gender-->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/muli_black_italic"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!--radio group-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>

            <!--Select age-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_black_italic"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <!--date picker-->
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

        </LinearLayout>

        <!--next button-->
        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:onClick="cll_activity_signUp3"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:transitionName="next_btn_tran" />
        <!--log btn-->
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/login_btn"
            android:textColor="@color/black"
            android:transitionName="login_btn_tran" />
    </LinearLayout>
</ScrollView>
