<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:padding="20dp"
    tools:context=".common.loginsignup.SignUp3rdclass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <!--back -->
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/back_button_logo"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:transitionName="back_btn_tran" />

        <!--     create account-->
        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black_italic"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:transitionName="create_ac_tran" />

        <!--    name,email,password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_country_code"
                android:textSize="18sp"
                android:fontFamily="@font/muli_black_italic"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>

            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/black_border"/>

            <!-- phone number      -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_mail_black_24dp"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
        <!--next button-->
        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:transitionName="next_btn_tran" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            android:text="@string/login_btn"
            android:textColor="@color/black"
            android:transitionName="login_btn_tran" />



    </LinearLayout>
</ScrollView>